cos exp and sin exp FT attempts

--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -37,8 +37,8 @@
   Up to this point we have supposed that the function
   whose development is required in a series of sines of multiple
   arcs can be developed in a series arranged according to powers
-  of the variable x, 
-  %and that only odd powers enter into that series. 
+  of the variable x,
+  %and that only odd powers enter into that series.
   \ldots
   We can extend the same results to any functions, even
   to those which are discontinuous and entirely arbitrary.
@@ -54,7 +54,7 @@
 %======================================
 \section{Introduction}
 %======================================
-Historically, before the Fourier Transform was the Taylor Expansion (transform). 
+Historically, before the Fourier Transform was the Taylor Expansion (transform).
 The Taylor Expansion demonstrates that for \propb{analytic} functions
 knowledge of the derivatives of a function at a location $x=a$
 allows you to determine (predict) arbitrarily closely all the points $\ff(x)$ in the vicinity of $x=a$ \xref{chp:taylor}.
@@ -67,14 +67,14 @@ He claimed that, rather than expansion based on derivatives, one could expand ba
 and that this would work not just for analytic functions, but for \propb{discontinuous} ones as well!\footnote{\citePp{robinson1982}{886}}
 
 \begin{minipage}{\tw-80mm}
-Needless to say, this did not go over too well initially in the mathematical community. 
+Needless to say, this did not go over too well initially in the mathematical community.
 But over time (on the order of 200 or so years), the Fourier Transform has in many ways won the day.
 \end{minipage}\hfill%
 \tboxc{\includegraphics[width=75mm]{../common/graphics/portraits/legendre_fourier.jpg}\footnotemark}
 \footnotetext{
   Caricature of Legendre (left) and Fourier (right), 1820,
   by Julien-L/'eopold Boilly (1796--1874).
-  ``\emph{Album de 73 Portraits-Charge Aquarelle's des Membres de I'Institute} (watercolor portrait \#29). 
+  ``\emph{Album de 73 Portraits-Charge Aquarelle's des Membres de I'Institute} (watercolor portrait \#29).
   Biliotheque de l'Institut de France."
   Public domain.
   \url{https://en.wikipedia.org/wiki/File:Legendre_and_Fourier_(1820).jpg}
@@ -86,12 +86,12 @@ But over time (on the order of 200 or so years), the Fourier Transform has in ma
 %%======================================
 %\section{Domain}
 %%======================================
-This chapter deals with the \ope{Fourier Transform} in the space of 
+This chapter deals with the \ope{Fourier Transform} in the space of
 \structe{Lebesgue square-integrable functions} $\spLLRBu$,
-where $\R$ is the set of real numbers, $\borel$ is the set of \structe{Borel sets} on $\R$, 
-$\msm$ is the standard \fncte{Borel measure} on $\B$, and 
+where $\R$ is the set of real numbers, $\borel$ is the set of \structe{Borel sets} on $\R$,
+$\msm$ is the standard \fncte{Borel measure} on $\B$, and
 \\\indentx$\ds\spLLRBu\eqd\set{\ff\in\clFrr}{\int_\R \abs{\ff}^2 \dmu < \infty}$.\\
-Furthermore, $\inprodn$ is the \fncte{inner product} induced by the operator $\int_\R\dmu$ such that 
+Furthermore, $\inprodn$ is the \fncte{inner product} induced by the operator $\int_\R\dmu$ such that
 \\\indentx$\ds\inprod{\ff}{\fg} \eqd \int_{\R}\ff(x)\fg^\ast(x)\dx$,\\
 and $\opair{\spLLRBu}{\inprodn}$ is a \structe{Hilbert space}.
 
@@ -124,7 +124,7 @@ Let $\fkernn$ be a \structe{function} in $\clF{\R^2}{\C}$.
 \label{def:opFT}
 %--------------------------------------
 %Let $\fkern{x}{\omega}$ be the \hie{kernel} $\fkern{x}{\omega}\eqd\fkerne{x}{\omega}$.
-Let $\spLLRBu$ be the space of all 
+Let $\spLLRBu$ be the space of all
 \structe{Lebesgue square-integrable functions}.\\
 \defboxt{
   The \opd{Fourier Transform} operator $\opFT$ is defined as
@@ -146,9 +146,9 @@ Let $\spLLRBu$ be the space of all
   \citerppg{knappb2005}{374}{375}{0817632506}
   }
 %--------------------------------------
-  If the Fourier transform operator $\opFT$ and inverse Fourier transform operator $\opFTi$ are defined as 
+  If the Fourier transform operator $\opFT$ and inverse Fourier transform operator $\opFTi$ are defined as
     \\\indentx
-      $\ds\opFT \ff(x)\eqd\fF(\omega)\eqd A \int_\R \ff(x)      e^{-i\omega x} \dx$ 
+      $\ds\opFT \ff(x)\eqd\fF(\omega)\eqd A \int_\R \ff(x)      e^{-i\omega x} \dx$
       \qquad{and}\qquad
       $\ds\opFTi\Ff(\omega) \eqd B \int_\R \fF(\omega) e^{ i\omega x} \dw$
     \\
@@ -178,7 +178,7 @@ Let $\spLLRBu$ be the space of all
   $\fscale$, then $\opFT$ and $\opFTi$ are inverses {\em and}
   $\opFT$ is \hie{unitary}---that is,
   $\opFT\opFTa = \opFTa\opFT = \opI$.
-\end{remark}  
+\end{remark}
 
 
 %======================================
@@ -280,7 +280,7 @@ inverse $\opFTi$ and adjoint $\opFTa$.
 
 The Fourier Transform operator has several nice properties:
 \begin{liste}
-  \item $\opFT$ is \hie{unitary} 
+  \item $\opFT$ is \hie{unitary}
     \ifdochas{operator}{\footnote{{\em \prop{unitary} operators}: \prefp{def:op_unitary} }}
     (\pref{cor:ft_unitary}---next corollary).
   \item Because $\opFT$ is unitary, it automatically has several other nice
@@ -291,7 +291,7 @@ The Fourier Transform operator has several nice properties:
 %---------------------------------------
 \begin{corollary}
 \label{cor:ft_unitary}
-\index{operator!unitary}  
+\index{operator!unitary}
 %---------------------------------------
 Let $\opI$ be the identity operator
 and let $\opFT$ be the Fourier Transform operator with
@@ -311,7 +311,7 @@ adjoint $\opFTa$ and inverse $\opFTi$.
 \label{thm:planform}
 %---------------------------------------
 Let $\opFT$ be the Fourier transform operator with adjoint $\opFTa$ and inverse $\opFT$.
-Let $\normopn$ be the operator norm with respect to the vector norm $\normn$ with respect to the 
+Let $\normopn$ be the operator norm with respect to the vector norm $\normn$ with respect to the
 Hilbert space $\opair{\clFrc}{\inprodn}$.
 Let $\oppR(\opA)$ be the range of an operator $\opA$.
 \thmbox{\begin{array}{rcl cl D}
@@ -368,7 +368,7 @@ Let $\opLT$ be the \ope{Laplace Transform} operator\ifsxref{laplace}{def:opLT}.
 \label{thm:ft_conj}
 \label{thm:ft_neg}
 %--------------------------------------
-Let $\opFT$ be the Fourier Transform operator and $\ast$ represent the complex conjugate operation on the set of 
+Let $\opFT$ be the Fourier Transform operator and $\ast$ represent the complex conjugate operation on the set of
 complex numbers.
 \thmbox{\begin{array}{rclCD}
   \opFT\ff^\ast(-x)                        &=& -\brs{\opFT\ff(x)}^\ast  & \forall\ff\in\spLLRBu\\
@@ -422,7 +422,7 @@ complex numbers.
 \defbox{\indxs{\conv}\begin{array}{M}
   The \opd{convolution operation} is defined as % $\conv\in\clF{\R^2}{\R}$ is defined as
   \\\indentx$\ds
-    \brs{\ff\conv\fg}(x) 
+    \brs{\ff\conv\fg}(x)
     \eqd \ff(x)\conv \fg(x)
     \eqd \int_{u\in\R} \ff(u)\fg(x-u) \du
     \qquad\scy\forall\ff,\fg\in\spLLRBu
@@ -580,7 +580,7 @@ Let $\opLT$ be the \ope{Laplace Transform} operator\ifsxref{laplace}{def:opLT}.
 \begin{theorem}
 \label{thm:FTreal}
 %---------------------------------------
-Let $\ff(x)$ be a function in $\spLLR$ and $\Ff(\omega)$ 
+Let $\ff(x)$ be a function in $\spLLR$ and $\Ff(\omega)$
 the \ope{Fourier Transform} of $\ff(x)$.
 %real-valued such that $\ff\in\clFrr$. Then
 \thmbox{
@@ -632,7 +632,7 @@ the \ope{Fourier Transform} of $\ff(x)$.
 \footnote{
   \citePpp{jawerth}{16}{17},
   \citePp{sweldens93}{2},
-  \citerpg{vidakovic}{83}{9780471293651}  
+  \citerpg{vidakovic}{83}{9780471293651}
   %\citerp{goswami}{102}    \\
   %\citerpp{mallat}{241}{243}
   }
@@ -651,7 +651,7 @@ the \ope{Fourier Transform} of $\ff(x)$.
   }
 \label{lem:har_moment}
 %--------------------------------------
-Let $\fM_n$ be the \fncte{$n$th moment} \xref{def:Mn_ft} and 
+Let $\fM_n$ be the \fncte{$n$th moment} \xref{def:Mn_ft} and
 $\Ff(\omega)\eqd\brs{\opFT\ff}(\omega)$ the \fncte{Fourier transform} \xref{def:opFT} of a function $\ff(x)$ in $\spLLR$ \xref{def:spLLR}.
 \lembox{\begin{array}{>{\ds}rc>{\ds}l@{\qquad}C}
   \fM_n  &=&  \brlr{\sqrt{2\pi}(i)^{n}\opddwn  \Ff(\omega)}_{\omega=0} & \forall n\in\Znn,\,\ff\in\spLLR\\
@@ -660,12 +660,12 @@ $\Ff(\omega)\eqd\brs{\opFT\ff}(\omega)$ the \fncte{Fourier transform} \xref{def:
 \end{lemma}
 \begin{proof}
   \begin{align*}
-    \sqrt{2\pi}(i)^n\brs{\opddwn \Ff(\omega)}_{\omega=0} 
-      &= \sqrt{2\pi}(i)^n\brs{\opddwn  \fscale\int_\R \ff(x) \fkernea{x}{\omega}\dx}_{\omega=0} 
+    \sqrt{2\pi}(i)^n\brs{\opddwn \Ff(\omega)}_{\omega=0}
+      &= \sqrt{2\pi}(i)^n\brs{\opddwn  \fscale\int_\R \ff(x) \fkernea{x}{\omega}\dx}_{\omega=0}
       && \text{by definition of $\opFT$}
       && \text{\xref{def:opFT}}
-    \\&= \left.(i)^n\int_\R \ff(x) \brs{\opddwn    \fkernea{x}{\omega}}\dx\right|_{\omega=0} 
-    \\&= \left.(i)^n\int_\R \ff(x) \brs{(-i)^n x^n \fkernea{x}{\omega}}\dx\right|_{\omega=0} 
+    \\&= \left.(i)^n\int_\R \ff(x) \brs{\opddwn    \fkernea{x}{\omega}}\dx\right|_{\omega=0}
+    \\&= \left.(i)^n\int_\R \ff(x) \brs{(-i)^n x^n \fkernea{x}{\omega}}\dx\right|_{\omega=0}
     \\&= (-i^2)^n \int_\R \ff(x) x^n \dx
     \\&= \int_\R \ff(x) x^n \dx
     \\&\eqd \fM_n
@@ -683,10 +683,10 @@ $\Ff(\omega)\eqd\brs{\opFT\ff}(\omega)$ the \fncte{Fourier transform} \xref{def:
 \label{lem:vanish_deriv}
 \index{vanishing moments}
 %--------------------------------------
-Let $\fM_n$ be the \fncte{$n$th moment} \xref{def:Mn_ft} and 
+Let $\fM_n$ be the \fncte{$n$th moment} \xref{def:Mn_ft} and
 $\Ff(\omega)\eqd\brs{\opFT\ff}(\omega)$ the \fncte{Fourier transform} \xref{def:opFT} of a function $\ff(x)$ in $\spLLR$ \xref{def:spLLR}.
 \lembox{
-  %\mcom{\inprod{\ff(x)}{x^n}=0}{$\ff(x)$ has a vanishing $n$th moment} 
+  %\mcom{\inprod{\ff(x)}{x^n}=0}{$\ff(x)$ has a vanishing $n$th moment}
   \fM_n=0
   \qquad\iff\qquad
   \left.\opddwn \Ff(\omega)\right|_{\omega=0} =0
@@ -695,7 +695,7 @@ $\Ff(\omega)\eqd\brs{\opFT\ff}(\omega)$ the \fncte{Fourier transform} \xref{def:
 \end{lemma}
 \begin{proof}
 \begin{enumerate}
-  \item Proof for $(\implies)$ case: 
+  \item Proof for $(\implies)$ case:
     \begin{align*}
       0 &= \inprod{\ff(x)}{x^n}
         && \text{by left hypothesis}
@@ -761,31 +761,31 @@ Let $\opTrn$ be the \fncte{translation operator} \xref{def:opT}.
     \end{align*}
 
   %The quantity $(-i)^n \fM_n$ is not a function of $x$ which implies
-  %that 
+  %that
   %$\sum_{k\in\Z} \left.\opddwn  \Ff(\omega)\right|_{\omega=2\pi k}=0$
   %for $k\ne 0$.
   %This implies
   %\[ \left.\opddwn  \Ff(\omega)\right|_{\omega=2\pi k}
   %   = (-i)^n \kdelta_k \fM_n.
   %\]
- 
+
   \item Proof for ($\impliedby$) case:
     \begin{align*}
       \cft (-i)^n \fM_n
         &= \cft \sum_{k\in\Z} \left[(-i)^n \kdelta_k \fM_n \right] e^{-i2\pi kx}
         && \text{by definition of $\kdelta$}
         && \text{\ifxref{frames}{def:kdelta}}
-      \\&= \sum_{k\in\Z} \left. 
-           \left[\opddwn  \Ff(\omega)\right]\right|_{\omega=2\pi k} 
+      \\&= \sum_{k\in\Z} \left.
+           \left[\opddwn  \Ff(\omega)\right]\right|_{\omega=2\pi k}
            e^{-i2\pi kx}
         && \text{by right hypothesis}
-      \\&= \sum_{k\in\Z} \left. 
+      \\&= \sum_{k\in\Z} \left.
            \left[
-           \opddwn 
+           \opddwn
            \int_\R  \ff(x) e^{-i\omega x} \dx
            \right]
            \right|_{\omega=2\pi k} e^{-i2\pi kx}
-      \\&= \sum_{k\in\Z} \left. 
+      \\&= \sum_{k\in\Z} \left.
            \left[
            \int_\R  \ff(x)(-ix)^n e^{-i\omega x} \dx
            \right]
@@ -795,7 +795,7 @@ Let $\opTrn$ be the \fncte{translation operator} \xref{def:opT}.
            \int_\R  x^n \ff(x)  e^{-i\omega x} \dx
            \right]
            \right|_{\omega=2\pi k} e^{-i2\pi kx}
-      \\&= (-i)^n \sum_{k\in\Z} (x-k)^n \ff(x-k) 
+      \\&= (-i)^n \sum_{k\in\Z} (x-k)^n \ff(x-k)
         && \text{by \thme{PSF}}
         && \text{\xref{thm:psf}}
     \end{align*}
@@ -934,18 +934,18 @@ Let $\opTrn$ be the \fncte{translation operator} \xref{def:opT}.
 %---------------------------------------
 Let $\Ff(\omega)$ be the \fncte{Fourier transform} of a function $\ff(x)\in\spLLR$.
 \exbox{\begin{array}{*{2}{>{\ds}c}}
-  \ff(x)  =  \brbl{\begin{array}{lM} 
+  \ff(x)  =  \brbl{\begin{array}{lM}
                      c & for $x\in\intco{a}{b}$ \\
                      0 & otherwise
                    \end{array}}
   &
-  \Ff(\omega) 
+  \Ff(\omega)
       = \frac{c(b-a)}{\sqrt{2\pi}}
         e^{-i\brp{\frac{a+b}{2}\omega}}
         \brs{\frac{\sin\brp{\frac{b-a}{2}\omega}}{\brp{\frac{b-a}{2}\omega}}}
   \\
-  \includegraphics{../common/math/graphics/pdfs/pulseabc.pdf} 
-  & 
+  \includegraphics{../common/math/graphics/pdfs/pulseabc.pdf}
+  &
   \includegraphics{../common/math/graphics/pdfs/pulseabcft.pdf}
 \end{array}}
 \end{example}
@@ -987,13 +987,13 @@ Let $\Ff(\omega)$ be the \fncte{Fourier transform} of a function $\ff(x)\in\spLL
                                   0 & otherwise
                   \end{array}}
   &
-  \Ff(\omega) 
+  \Ff(\omega)
       = \frac{c(b-a)^2}{4\sqrt{2\pi}}
         e^{-i\brp{\frac{a+b}{2}\omega}}
         \brs{\frac{\sin\brp{\frac{b-a}{4}\omega}}{\brp{\frac{b-a}{4}\omega}}}^2
   \\
   \mc{2}{c}{
-    \includegraphics{../common/math/graphics/pdfs/triangleabc.pdf} \hspace{10mm} 
+    \includegraphics{../common/math/graphics/pdfs/triangleabc.pdf} \hspace{10mm}
     \includegraphics{../common/math/graphics/pdfs/triangleabcft.pdf}
     }
 \end{array}}
@@ -1139,18 +1139,18 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
   \\&= \frac{1}{4\sqrt{2\pi}} \int_{-1}^{1} \brs{2 + e^{i\pi x} + e^{-i\pi x}} e^{-i\omega x} \dx
   \\&= \frac{1}{4\sqrt{2\pi}} \int_{-1}^{1} 2e^{-i\omega x} + e^{-i(\omega+\pi)x} + e^{-i(\omega-\pi)x}  \dx
   \\&= \frac{1}{4\sqrt{2\pi}}\brs{
-           2\frac{e^{-i\omega x}}{-i\omega} 
-         +  \frac{e^{-i(\omega+\pi)x}}{-i(\omega+\pi)} 
-         +  \frac{e^{-i(\omega-\pi)x}}{-i(\omega-\pi)}  
+           2\frac{e^{-i\omega x}}{-i\omega}
+         +  \frac{e^{-i(\omega+\pi)x}}{-i(\omega+\pi)}
+         +  \frac{e^{-i(\omega-\pi)x}}{-i(\omega-\pi)}
        }_{-1}^{1}
-  \\&= \frac{1}{2\sqrt{2\pi}}\brs{  
-           2\frac{e^{-i\omega}-e^{+i\omega}}{-2i\omega} 
-         +  \frac{e^{-i(\omega+\pi)}-e^{+i(\omega+\pi)}}{-2i(\omega+\pi)} 
-         +  \frac{e^{-i(\omega-\pi)}-e^{+i(\omega-\pi)}}{-2i(\omega-\pi)}  
+  \\&= \frac{1}{2\sqrt{2\pi}}\brs{
+           2\frac{e^{-i\omega}-e^{+i\omega}}{-2i\omega}
+         +  \frac{e^{-i(\omega+\pi)}-e^{+i(\omega+\pi)}}{-2i(\omega+\pi)}
+         +  \frac{e^{-i(\omega-\pi)}-e^{+i(\omega-\pi)}}{-2i(\omega-\pi)}
        }_{-1}^{1}
   \\&= \frac{1}{2\sqrt{2\pi}}\Big[{
             \mcom{\frac{2\sin\omega}{\omega}}{$2\sinc(\omega)$}
-         +  \mcom{\frac{\sin(\omega+\pi)}{(\omega+\pi)}}{$\sinc(\omega+\pi)$} 
+         +  \mcom{\frac{\sin(\omega+\pi)}{(\omega+\pi)}}{$\sinc(\omega+\pi)$}
          +  \mcom{\frac{\sin(\omega-\pi)}{(\omega-\pi)}}{$\sinc(\omega-\pi)$}
        }\Big]
 \end{align*}
@@ -1178,8 +1178,8 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
      + \int_{0}^{\infty} e^{-\alpha(\tau)} e^{-j\omega\tau}\dtau
   \\&= \int_{-\infty}^{0} e^{\tau(\alpha-j\omega)}\dtau
      + \int_{0}^{\infty} e^{\tau(-\alpha-j\omega)}\dtau
-  \\&= \brlr{\frac{e^{\tau(\alpha-j\omega)}}{\alpha-j\omega}}_{-\infty}^{0} 
-     + \brlr{\frac{e^{\tau(-\alpha-j\omega)}}{-\alpha-j\omega}}_{0}^{\infty} 
+  \\&= \brlr{\frac{e^{\tau(\alpha-j\omega)}}{\alpha-j\omega}}_{-\infty}^{0}
+     + \brlr{\frac{e^{\tau(-\alpha-j\omega)}}{-\alpha-j\omega}}_{0}^{\infty}
     && \text{by Fundamental Theorem of Calculus}
   \\&= \brs{\frac{1}{\alpha-j\omega} - 0}
      + \brs{0- \frac{1}{-\alpha-j\omega}}
@@ -1188,6 +1188,100 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
   \\&= \frac{\alpha-j\omega}{\alpha^2+\omega^2}
      + \frac{\alpha+j\omega}{\alpha^2+\omega^2}
   \\&= \brs{\frac{2\alpha}{\alpha^2+\omega^2}}
+\end{align*}
+\end{proof}
+
+%-------------------------------------
+\begin{example}
+\label{ex:coseatau}
+%-------------------------------------
+\exbox{
+  \opFT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}
+    = \frac{1}{\sqrt{2\pi}}\brs{\frac{2\alpha}{\alpha^2+(\beta-\omega)^2}}
+ }
+\end{example}
+\begin{proof}
+\begin{align*}
+  \sqrt{2\pi}\opFT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}
+    &\eqd \sqrt{2\pi}\brs{\frac{1}{\sqrt{2\pi}}}\int_{-\infty}^{\infty} \cos(\beta x)e^{-\alpha\abs{x}} e^{-i\omega x}\dx
+    && \text{by definition Fourier Transform}
+    && \text{\xref{def:opFT}}
+  \\&= \int_{-\infty}^{\infty} \brs{\frac{e^{i\beta x}+e^{-i\beta x}}{2}} e^{-\alpha\abs{x}} e^{-i\omega x}\dx
+    &&  \text{by Euler's identity}
+  \\&= \frac{1}{2}\int_{-\infty}^{\infty} \brs{e^{-\alpha\abs{x}+i\beta x-i\omega x}+e^{-\alpha\abs{x}-i\beta x-i\omega x}} \dx
+  \\&= \mathrlap{
+       \frac{1}{2}\int_{-\infty}^{0} \brs{e^{ \alpha x +i\beta x-i\omega x}+e^{ \alpha x -i\beta x-i\omega x}} \dx
+     + \frac{1}{2}\int_{0}^{\infty}  \brs{e^{-\alpha x +i\beta x-i\omega x}+e^{-\alpha x -i\beta x-i\omega x}} \dx
+       }
+  \\&= \mathrlap{
+       \frac{1}{2} \brs{\frac{e^{ \alpha x +ix(\beta-\omega)}}{ \alpha +i(\beta-\omega)} + \frac{e^{ \alpha x -ix(\beta-\omega)}}{ \alpha -i(\beta-\omega}}_{-\infty}^{0}
+     + \frac{1}{2} \brs{\frac{e^{-\alpha x +ix(\beta-\omega)}}{-\alpha +i(\beta-\omega)} + \frac{e^{-\alpha x -ix(\beta-\omega)}}{-\alpha -i(\beta-\omega}}_{0}^{\infty}
+       }
+   %&& \text{by Fundamental Theorem of Calculus}
+  \\&= \mathrlap{
+       \frac{1}{2} \brs{\frac{e^{ \alpha x} e^{ix(\beta-\omega)}}{ \alpha +i(\beta-\omega)} + \frac{e^{ \alpha x} e^{-ix(\beta-\omega)}}{ \alpha -i(\beta-\omega)}}_{-\infty}^{0}
+     + \frac{1}{2} \brs{\frac{e^{-\alpha x} e^{ix(\beta-\omega)}}{-\alpha +i(\beta-\omega)} + \frac{e^{-\alpha x} e^{-ix(\beta-\omega)}}{-\alpha -i(\beta-\omega)}}_{0}^{\infty}
+       }
+  \\&= \mathrlap{
+       \frac{1}{2} \brs{\frac{1}{ \alpha +i(\beta-\omega)} + \frac{1}{ \alpha -i(\beta-\omega)} - (0+0)}
+     + \frac{1}{2} \brs{(0+0)-\brp{\frac{1}{-\alpha +i(\beta-\omega)} + \frac{1}{-\alpha -i(\beta-\omega)}}}
+       }
+  \\&= \brs{\frac{1}{ \alpha +i(\beta-\omega)}}
+     + \brs{\frac{1}{ \alpha -i(\beta-\omega)}}
+  \\&= \mathrlap{
+       \brs{\frac{1}{ \alpha +i(\beta-\omega)}} \brs{\frac{ \alpha -i(\beta-\omega)}{ \alpha -i(\beta-\omega)}}
+     + \brs{\frac{1}{ \alpha -i(\beta-\omega)}} \brs{\frac{ \alpha +i(\beta-\omega)}{ \alpha +i(\beta-\omega)}}
+       }
+   %&& \text{(Rationalizing the Denominator)}
+  \\&= \frac{2\alpha}{\alpha^2+(\beta-\omega)^2}
+\end{align*}
+\end{proof}
+
+%-------------------------------------
+\begin{example}
+\label{ex:sineatau}
+%-------------------------------------
+%what is the Fourier Transform of an odd function (e.g. $\sin(\beta x)$)
+%times an odd function (e.g. $e^{-\alpha\abs{x}}$)?
+%Of course 
+\exbox{
+  \opFT\brs{\sin(\beta x)e^{-\alpha\abs{x}}}
+    ?=? 0
+ }
+\end{example}
+\begin{proof}
+\begin{align*}
+  \sqrt{2\pi}\opFT\brs{\sin(\beta x)e^{-\alpha\abs{x}}}
+    &\eqd \sqrt{2\pi}\brs{\frac{1}{\sqrt{2\pi}}}\int_{-\infty}^{\infty} \sin(\beta x)e^{-\alpha\abs{x}} e^{-i\omega x}\dx
+    && \text{by definition Fourier Transform}
+    && \text{\xref{def:opFT}}
+  \\&= \int_{-\infty}^{\infty} \brs{\frac{e^{i\beta x}-e^{-i\beta x}}{2i}} e^{-\alpha\abs{x}} e^{-i\omega x}\dx
+    &&  \text{by Euler's identity}
+  \\&= \frac{1}{2i}\int_{-\infty}^{\infty} \brs{e^{-\alpha\abs{x}+i\beta x-i\omega x}-e^{-\alpha\abs{x}-i\beta x-i\omega x}} \dx
+  \\&= \mathrlap{
+       \frac{1}{2i}\int_{-\infty}^{0} \brs{e^{ \alpha x +i\beta x-i\omega x}-e^{ \alpha x -i\beta x-i\omega x}} \dx
+     + \frac{1}{2i}\int_{0}^{\infty}  \brs{e^{-\alpha x +i\beta x-i\omega x}-e^{-\alpha x -i\beta x-i\omega x}} \dx
+       }
+  \\&= \mathrlap{
+       \frac{1}{2i} \brs{\frac{e^{ \alpha x +ix(\beta-\omega)}}{ \alpha +i(\beta-\omega)} - \frac{e^{ \alpha x -ix(\beta-\omega)}}{ \alpha -i(\beta-\omega}}_{-\infty}^{0}
+     + \frac{1}{2i} \brs{\frac{e^{-\alpha x +ix(\beta-\omega)}}{-\alpha +i(\beta-\omega)} - \frac{e^{-\alpha x -ix(\beta-\omega)}}{-\alpha -i(\beta-\omega}}_{0}^{\infty}
+       }
+   %&& \text{by Fundamental Theorem of Calculus}
+  \\&= \mathrlap{
+       \frac{1}{2i} \brs{\frac{e^{ \alpha x} e^{ix(\beta-\omega)}}{ \alpha +i(\beta-\omega)} - \frac{e^{ \alpha x} e^{-ix(\beta-\omega)}}{ \alpha -i(\beta-\omega)}}_{-\infty}^{0}
+     + \frac{1}{2i} \brs{\frac{e^{-\alpha x} e^{ix(\beta-\omega)}}{-\alpha +i(\beta-\omega)} - \frac{e^{-\alpha x} e^{-ix(\beta-\omega)}}{-\alpha -i(\beta-\omega)}}_{0}^{\infty}
+       }
+  \\&= \mathrlap{
+       \frac{1}{2i} \brs{\frac{1}{ \alpha +i(\beta-\omega)} - \frac{1}{ \alpha -i(\beta-\omega)} - (0-0)}
+     + \frac{1}{2i} \brs{(0-0)-\brp{\frac{1}{-\alpha +i(\beta-\omega)} - \frac{1}{-\alpha -i(\beta-\omega)}}}
+       }
+  \\&?=? \frac{1}{2i} \brs{
+         \frac{1}{ \alpha +i(\beta-\omega)} 
+       - \frac{1}{ \alpha -i(\beta-\omega)}
+       + \frac{1}{ \alpha -i(\beta-\omega)} 
+       - \frac{1}{ \alpha +i(\beta-\omega)}
+       }
+  \\&= 0
 \end{align*}
 \end{proof}
 
