Laplace of cos exp

--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -209,3 +209,60 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 \end{enumerate}
 \end{proof}
 
+%=======================================
+\section{Examples}
+%=======================================
+%-------------------------------------
+\begin{example}
+\label{ex:coseatau}
+%-------------------------------------
+\exbox{
+  \opFT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}
+    = \frac{1}{\sqrt{2\pi}}\brs{\frac{2\alpha}{\alpha^2+(\beta-\omega)^2}}
+ }
+\end{example}
+\begin{proof}
+\begin{align*}
+  \opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}
+    &\eqd \int_{\R} \cos(\beta x)e^{-\alpha\abs{x}} e^{-s x}\dx
+    && \text{by definition of $\opLT$}
+    && \text{\xref{def:opLT}}
+  \\&= \int_{\R} \brs{\frac{e^{i\beta x}+e^{-i\beta x}}{2}} e^{-\alpha\abs{x}} e^{-s x}\dx
+    &&  \text{by Euler's identity}
+  \\&= \frac{1}{2}\int_{\R} \brs{e^{-\alpha\abs{x}+i\beta x-s x}+e^{-\alpha\abs{x}-i\beta x-s x}} \dx
+  \\&= \mathrlap{
+       \frac{1}{2}\int_{-\infty}^{0} \brs{e^{ \alpha x-sx +i\beta x}+e^{ \alpha x-s x -i\beta x}} \dx
+     + \frac{1}{2}\int_{0}^{\infty}  \brs{e^{-\alpha x-sx +i\beta x}+e^{-\alpha x-s x -i\beta x}} \dx
+       }
+  \\&= \mathrlap{
+       \frac{1}{2} \brs{\frac{e^{ \alpha x -s +ix\beta}}{ \alpha -s +i\beta} + \frac{e^{ \alpha x +s -ix\beta}}{ \alpha +s -i\beta}}_{-\infty}^{0}
+     + \frac{1}{2} \brs{\frac{e^{-\alpha x -s +ix\beta}}{-\alpha -s +i\beta} + \frac{e^{-\alpha x +s -ix\beta}}{-\alpha +s -i\beta}}_{0}^{\infty}
+       }
+   %&& \text{by Fundamental Theorem of Calculus}
+  \\&= \mathrlap{
+       \frac{1}{2} \brs{\frac{e^{ \alpha x} e^{-s + ix\beta}}{ \alpha -s +i\beta} + \frac{e^{ \alpha x} e^{s -ix\beta}}{ \alpha +s -i\beta}}_{-\infty}^{0}
+     + \frac{1}{2} \brs{\frac{e^{-\alpha x} e^{-s + ix\beta}}{-\alpha -s +i\beta} + \frac{e^{-\alpha x} e^{s -ix\beta}}{-\alpha +s -i\beta}}_{0}^{\infty}
+       }
+  \\&= \mathrlap{
+       \frac{1}{2} \brs{\frac{1}{ \alpha -s +i\beta} + \frac{1}{ \alpha+s -i\beta} - (0+0)}
+     + \frac{1}{2} \brs{(0+0)-\brp{\frac{1}{-\alpha -s +i\beta} + \frac{1}{-\alpha +s -i\beta}}}
+       }
+  \\&= \brs{\frac{1}{ \alpha -s +i\beta}}
+     + \brs{\frac{1}{ \alpha +s -i\beta}}
+  %\\&= \mathrlap{
+  %     \brs{\frac{1}{ \alpha -s +i\beta}} \brs{\frac{ \alpha -s -i\beta}
+  %                                                  { \alpha -s -i\beta}}
+  %   + \brs{\frac{1}{ \alpha +s -i\beta}} \brs{\frac{ \alpha +s +i\beta}
+  %                                                  { \alpha +s +i\beta}}
+  %     }
+  %\\&= \frac{-s + \alpha -i\beta}{(s - \alpha)^2 + \beta^2}
+  %   + \frac{ s + \alpha +i\beta}{(s + \alpha)^2 + \beta^2}
+  %\\&= \frac{(-s + \alpha -i\beta)[(s + \alpha)^2 + \beta^2] + (s + \alpha +i\beta)[(s - \alpha)^2 + \beta^2]}
+  %          {[(s + \alpha)^2 + \beta^2][(s - \alpha)^2 + \beta^2]}
+   %&& \text{(Rationalizing the Denominator)}
+\end{align*}
+\end{proof}
+
+
+
+
