--- a/common/transop.tex
+++ b/common/transop.tex
@@ -1253,24 +1253,13 @@ A generalization of the \fncte{Poisson Summation Formula} \xref{thm:psf} is the
   }
 \end{remark}
 
-
-
-%%=======================================
-%\section{Basis theory properties}
-%%=======================================
 %=======================================
-%\subsection{Bases for function spaces}
-%=======================================
-
-
-
-%=======================================
-\section{Examples}
+\section{Basis theory properties}
 %=======================================
 %--------------------------------------
 \begin{example}[\exmd{linear functions}]
 \footnote{
-  \citerpg{higgins1996}{2}{0198596995} %{1.1 General introduction}
+  \citerpgc{higgins1996}{2}{0198596995}{1.1 General introduction}
   }
 \label{ex:TD_flinear}
 %--------------------------------------
@@ -1329,9 +1318,9 @@ See \prefp{thm:cardinalSeries}.
 %Define an alternative dilation operator $\opDil_n$ as
 %\\\indentx$\ds\brs{\opDil_n\ff}(x)\eqd\ff(nx)$, $n\in\Z$.
 \exbox{\begin{array}{Frc>{\ds}lCD}
-  1. & \mc{4}{M}{$\ds\setxZ{\opDil_n e^{ix}}$ is a \structe{basis} for $\spL\intoo{0}{2\pi}$}         & and\\
-  2. & \ff(x)   &=&    \cft \sum_{n\in\Z} \alpha_n \opDil_n e^{ix}            & \forall x\in\intoo{0}{2\pi},\,\ff\in\spL\intoo{0}{2\pi}   & where\\
-  3. & \alpha_n &\eqd& \cft \int_0^{2\pi} \ff(x) \opDil_n e^{-ix} \dx         & \forall\ff\in\spL\intoo{0}{2\pi}
+  (1). & \mc{4}{M}{$\ds\setxZ{\opDil_n e^{ix}}$ is a \structe{basis} for $\spL\intoo{0}{2\pi}$}         & and\\
+  (2). & \ff(x)   &=&    \cft \sum_{n\in\Z} \alpha_n \opDil_n e^{ix}            & \forall x\in\intoo{0}{2\pi},\,\ff\in\spL\intoo{0}{2\pi}   & where\\
+       & \alpha_n &\eqd& \cft \int_0^{2\pi} \ff(x) \opDil_n e^{-ix} \dx         & \forall\ff\in\spL\intoo{0}{2\pi}
 \end{array}}
 \end{example}
 \begin{proof}
@@ -1346,9 +1335,9 @@ See \prefp{thm:opFSi}.
 %Define an alternative dilation operator $\opDil_\omega$ as
 %\\\indentx$\ds\brs{\opDil_\omega\ff}(x)\eqd\ff(\omega x)$, $\omega\in\R$.
 \exbox{\begin{array}{Frc>{\ds}lCD}
-  1. & \mc{4}{M}{$\ds\set{\opDil_\omega e^{ix}}{\scy\omega\in\R}$ is a \structe{basis} for $\spLLR$}         & and\\
-  2. & \ff(x)      &=&    \cft \int_\R \Ff(\omega) \opDil_x e^{i\omega} \dw  & \forall\ff\in\spLLR   & where\\
-  3. & \Ff(\omega) &\eqd& \cft \int_\R \ff(x) \opDil_\omega e^{-ix} \dx  & \forall\ff\in\spLLR
+  (1). & \mc{4}{M}{$\ds\set{\opDil_\omega e^{ix}}{\scy\omega\in\R}$ is a \structe{basis} for $\spLLR$}         & and\\
+  (2). & \ff(x)      &=&    \cft \int_\R \Ff(\omega) \opDil_x e^{i\omega} \dw  & \forall\ff\in\spLLR   & where\\
+       & \Ff(\omega) &\eqd& \cft \int_\R \ff(x) \opDil_\omega e^{-ix} \dx  & \forall\ff\in\spLLR
 \end{array}}
 \end{example}
 
@@ -1364,9 +1353,9 @@ See \prefp{thm:opFSi}.
 %Define an alternative dilation operator $\opDil_\omega$ and an alternative translation operator $\opTrn_\tau$ as
 %\\\indentx$\brs{\opDil_\omega\ff}(x)\eqd\ff(\omega x)$, \qquad and\qquad $\brs{\opTrn_\tau\ff}(x)\eqd\ff(x-\tau)$,\qquad$\scy\omega,\tau\in\R$.
 \exbox{\begin{array}{Frc>{\ds}lCD}
-  1. & \mc{4}{M}{$\ds\setbigleft{\brp{\opTrn_\tau e^{-\pi x^2}}\brp{\opDil_\omega e^{ix}}}{\scy\tau,\omega\in\R}$ is a \structe{basis} for $\spLLR$}         & and\\
-  2. & \ff(x)                  &=&    \int_\R \fG\opair{\tau}{\omega} \opDil_x e^{i\omega} \dw & \forall x\in\R,\,\ff\in\spLLR   & where\\
-  3. & \fG\opair{\tau}{\omega} &\eqd& \int_\R \ff(x) \brp{\opTrn_\tau e^{-\pi x^2}}\brp{\opDil_\omega e^{-ix}} \dx & \forall x\in\R,\,\ff\in\spLLR
+  (1). & \mc{4}{M}{$\ds\setbigleft{\brp{\opTrn_\tau e^{-\pi x^2}}\brp{\opDil_\omega e^{ix}}}{\scy\tau,\omega\in\R}$ is a \structe{basis} for $\spLLR$}         & and\\
+  (2). & \ff(x)                  &=&    \int_\R \fG\opair{\tau}{\omega} \opDil_x e^{i\omega} \dw & \forall x\in\R,\,\ff\in\spLLR   & where\\
+       & \fG\opair{\tau}{\omega} &\eqd& \int_\R \ff(x) \brp{\opTrn_\tau e^{-\pi x^2}}\brp{\opDil_\omega e^{-ix}} \dx & \forall x\in\R,\,\ff\in\spLLR
 \end{array}}
 \end{example}
 
@@ -1376,9 +1365,9 @@ See \prefp{thm:opFSi}.
 %--------------------------------------
 Let $\fpsi(x)$ be a \fncte{wavelet}.
 \exbox{\begin{array}{Frc>{\ds}lCD}
-  1. & \mc{4}{M}{$\ds\setbigleft{\opDil^k\opTrn^n \fpsi(x)}{\scy k,n\in\Z}$ is a \structe{basis} for $\spLLR$}         & and\\
-  2. & \ff(x)    &=&    \sum_{k\in\Z}\sum_{n\in\Z} \alpha_{k,n} \opDil^k\opTrn^n\fpsi(x) & \forall \ff\in\spLLR        & where\\
-  3. & \alpha_n  &\eqd& \int_\R \ff(x) \opDil^k\opTrn^n\fpsi^\ast(x) \dx & \forall\ff\in\spLLR
+  (1). & \mc{4}{M}{$\ds\setbigleft{\opDil^k\opTrn^n \fpsi(x)}{\scy k,n\in\Z}$ is a \structe{basis} for $\spLLR$}         & and\\
+  (2). & \ff(x)    &=&    \sum_{k\in\Z}\sum_{n\in\Z} \alpha_{k,n} \opDil^k\opTrn^n\fpsi(x) & \forall \ff\in\spLLR        & where\\
+       & \alpha_n  &\eqd& \int_\R \ff(x) \opDil^k\opTrn^n\fpsi^\ast(x) \dx & \forall\ff\in\spLLR
 \end{array}}
 \end{example}
 
